<resources>
    <string name="app_name">Wemax</string>
    <string name="contentdescription">Content Description</string>
    <string name="book_now">Book Now</string>
    <string name="services">Services : </string>
    <string name="location_title">Location : </string>
    <string name="location_title_gray">Location</string>
    <string name="location_text">8614 Mcclellan Rd New York, United States</string>
    <string name="about_me">About Me :</string>
    <string name="event_description">Event Description :</string>
    <string name="open">Open</string>
    <string name="days_of_service_open">(Mon - Fri)</string>
    <string name="time_of_service_open">8:00 AM - 6:00 PM</string>
    <string name="service_name_detail_activity">Bloomington Beauty Salon</string>
    <string name="event_name">New Year Party</string>
    <string name="service_rating_value_details_activity">4.5</string>
    <string name="service_rating_value_details_activity2">4.5 (2 Reviews)</string>
    <string name="see_all">See All</string>
    <string name="userName">Nikolaus Krienke</string>
    <string name="review_day_and_date">Thursday, 15 October 2020</string>
    <string name="about_me_text">Brief description of category Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo</string>
    <string name="review">Reviews :</string>
    <string name="hair_style">Hair Styles</string>
    <string name="hair_cut">Hair Cut</string>
    <string name="nail_polish_styles">Nail Polish Styles</string>
    <string name="nail_polish_removal">Nail Polish Removal</string>
    <string name="service_time_30_min">30 Min</string>
    <string name="service_time_15_min">15 Min</string>
    <string name="service_time_1_hour">1 Hour</string>
    <string name="service_cost_10">$ 10</string>
    <string name="service_cost_20">$ 20</string>
    <string name="service_cost_100">$ 100</string>
    <string name="service_cost_5">$ 5</string>
    <string name="read_more">read more</string>
    <string name="read_less">read less</string>
    <string name="api_key_amd">AIzaSyCWgw0vAmWoYD0GlnW6cAN1lv_nTZ3wHV4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut </string>
    <string name="ny_newyork">NY, Newyork</string>
    <string name="slider_image_description">Your Trusted Maid Service In USA Starting From $10 Per Hour</string>
    <string name="image_title">Title</string>
    <string name="text_title_slider_image">Home Cleaning</string>
    <string name="office_cleaning">Office Cleaning</string>
    <string name="post_title">Bloomington Beauty Salon</string>
    <string name="rating_text">4.4</string>
    <string name="recomemded_for_you">Recommended Businesses For You</string>
    <string name="recomemded_events">Recommended Events</string>
    <string name="nearby_providers">Nearby Providers</string>
    <string name="book_appointment">Book Appointment\nwith us</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_now"><u>Register now</u></string>
    <string name="login">Login</string>
    <string name="please_login_to">Please login to your account.</string>
    <string name="email">Email</string>
    <string name="emailorusername">Email or Username</string>
    <string name="sunilkargwal_gmail_com">sunilkargwal@gmail.com</string>
    <string name="password">Password</string>
    <string name="pass">* * * * *</string>
    <string name="login_btn">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">or login with</string>
    <string name="or_signup_with">or Sign Up With</string>
    <string name="by_signing_up">By signing up, you are agree with our</string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="addresses">Addresses</string>
    <string name="where_do_you_want">Where Do You Want The Service\nDelivered ?</string>
    <string name="add_new_address">Add New Address</string>
    <string name="mcclellan_rd_new_york">8614 Mcclellan Rd New York, United States</string>
    <string name="banner1_title">Book Appointment</string>
    <string name="banner1_caption">Booking Appointments Online Was Never\nEasier, Start Doing It With Us</string>
    <string name="banner2_title">Manage Your Calendar With Friends,\nFamily And Work Mates</string>
    <string name="banner2_caption">Calendar Management Ensures You Can Poperly\nPrioritize Key Goals And Events</string>
    <string name="banner3_title">Find Something To Do</string>
    <string name="banner3_caption">Find What To Do According To Your\nPreference And Availability</string>
    <string name="banner4_title">Communicate With Friends With\nSimilar Hobbies And Interest...</string>
    <string name="banner4_caption">Create Groups And Plan Events</string>
    <string name="inbox">Inbox</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="hot_events">Hot Events</string>
    <string name="find_something_to_do">Find Something To Do</string>
    <string name="create_event">Create Event</string>
    <string name="upload_event_image">Upload Event Image</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_event_description">Enter Event Description</string>
    <string name="location">Location</string>
    <string name="event_date_amp_time"><![CDATA[Event Date & Time]]></string>
    <string name="dd_mm_yyyy_23_59">dd-mm-yyyy @ 00:00 PM</string>
    <string name="address_text">8614 Mcclellan Rd New York, United States</string>
    <string name="bringing_list">Bringing List</string>
    <string name="add_custom_label">Add Custom Label</string>
    <string name="years_of_experience">Years Of Experience</string>
    <string name="event_details">Event Details</string>
    <string name="_2_km_away">2 Km away</string>
    <string name="barbecue">Barbecue</string>
    <string name="_16_people_are_going">16 People Are Going</string>
    <string name="details">Details</string>
    <string name="deny">Deny</string>
    <string name="confirm">Confirm</string>
    <string name="details_caption">30 Invited 16 Accepted 8 Denied 6\nDid Not Respond</string>
    <string name="groups">Groups</string>
    <string name="create_group">Create Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_group_description">Enter Group Description</string>
    <string name="enter_post_description">Add Description</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="post_details">Post Details</string>
    <string name="best_friends_forever">Best Friends Forever</string>
    <string name="group_members">Group Members</string>
    <string name="my_groups">My Groups</string>
    <string name="cordelia_john">Cordelia John</string>
    <string name="cordelia_john_firstName">Cordelia</string>
    <string name="nice_places_group_name">Nice Places To Visit</string>
    <string name="best_friends_group_name">Best Friends Forever</string>
    <string name="professional_barbers_group_name">Professional Barbers</string>
    <string name="admin">Admin</string>
    <string name="_60_post_a_day">60 Post a day</string>
    <string name="view_members">View Members</string>
    <string name="private_group">Private Group</string>
    <string name="new_for_you">New For You</string>
    <string name="groups_you_might_be_interested_in">Groups You Might Be Interested In</string>
    <string name="discover">Discover</string>
    <string name="public_group">Public Group</string>
    <string name="_1k_members">1K Members</string>
    <string name="post_caption2">Hello Guys Good Morning....!</string>
    <string name="post_caption3">Hair cutting and shaving starting from $ 10 only</string>
    <string name="_23_min_ago">23 min ago</string>
    <string name="report_this_post">Report This Post</string>
    <string name="_5_other">5 other</string>
    <string name="like_this">like this</string>
    <string name="and">and</string>
    <string name="july_monday_2022">July, Monday, 2022</string>
    <string name="appointment_for_barber">Appointment For Barber</string>
    <string name="_12_00_am_2_00_am">05:00 pm - 06:00 pm</string>
    <string name="my_next_event">My Next Event</string>
    <string name="_4h_32_min_2_sec">7H : 19 Min : 22 Sec</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_your_details">Please enter your details.</string>
    <string name="phone_number">Phone Number</string>
    <string name="_123342312312">123342312312</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_send_to_91_99">Enter The OTP Send To +91 ******* 99</string>
    <string name="time_remaining">Time Remaining :</string>
    <string name="_30_sec">30 Sec</string>
    <string name="didn_t_receive_otp">Didn’t Receive Otp?</string>
    <string name="resend"><u>Resend</u></string>
    <string name="phone_verification"><u>Or Continue With Phone Verification</u></string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="please_upload_your_profile_photo">please upload your profile photo</string>
    <string name="skip_for_now"><u>Skip For Now</u></string>
    <string name="remind"><u>Remind Me Later</u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="new_to_wemax">New to wemax?</string>
    <string name="continue_as_guest"><u>Continue as guest</u></string>
    <string name="enter_the_otp_send_to_91_999_999_99">Enter The OTP Send To</string>
    <string name="contact">+91 999 999 99</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_capital">RESEND</string>
    <string name="select_date_time"><![CDATA[Select Date & Time]]></string>
    <string name="when_do_you_want">When Do You Want The Service\nDelivered ?</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="please_select">Please select</string>
    <string name="continue_as">Continue As</string>
    <string name="business">Business</string>
    <string name="individual">Individual</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now"><u>Login now</u></string>
    <string name="profile">Profile</string>
    <string name="_26_may_1999">26 May 1999</string>
    <string name="brief_descprion">Brief description of category Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="see_friends">See Friends</string>
    <string name="old_ones">Old Ones</string>
    <string name="write_a_comment">Write A Comment . . .</string>
    <string name="post">Post</string>
    <string name="_3_hours">3 hrs</string>
    <string name="your_appointment_is_created_nsuccessfully">Your appointment is created \nsuccessfully</string>
    <string name="congratulation">Congratulation</string>
    <string name="sunil_kargwa">sunil kargwa</string>
    <string name="find_events">Find Events</string>
    <string name="_6_invited_2_accepted_2_denied_2_did_not_respond">6 Invited 2 Accepted 2 Denied 2 Did Not Respond.</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="didnt_respond">Didnt Respond</string>
    <string name="event_membs">Event Members</string>
</resources>