<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.home.event.EventMembersActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:cardElevation="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/backpress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_12sdp"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/back_arrow" />

            </LinearLayout>


            <TextView
                android:id="@+id/topView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/event_membs"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>



    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_resultfound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_light"
            android:includeFontPadding="false"
            android:text="@string/_6_invited_2_accepted_2_denied_2_did_not_respond"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tv_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/accepted"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_accepted"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp" />

        <TextView
            android:id="@+id/tv_rejected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/rejected"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_rejected"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp" />

        <TextView
            android:id="@+id/tv_respond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/didnt_respond"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_respond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>