<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_screen_bg"
    tools:context=".Activity.auth.ContinueAsActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_below="@id/view"
        android:layout_marginTop="@dimen/_45sdp"
        android:src="@drawable/ic_splashlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/continue_as"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/tv_please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_continue"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/poppins_light"
            android:includeFontPadding="false"
            android:text="@string/please_select"
            android:textColor="@color/see_all_text"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/business_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:layout_weight="1"
                android:background="@drawable/indivisual_bg"
                android:paddingTop="@dimen/_17sdp"
                android:paddingBottom="@dimen/_9sdp">

                <RelativeLayout
                    android:id="@+id/container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/logo_business"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_90sdp"
                        android:src="@drawable/ic_business" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/logo_business"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:includeFontPadding="false"
                        android:text="@string/business"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/individual_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:layout_weight="1"
                android:background="@drawable/indivisual_bg"
                android:paddingTop="@dimen/_17sdp"
                android:paddingBottom="@dimen/_9sdp">

                <RelativeLayout
                    android:id="@+id/container_indivi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/logo_individ"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_90sdp"
                        android:src="@drawable/ic_indivdiual" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/logo_individ"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:includeFontPadding="false"
                        android:text="@string/individual"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/already_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tv_donthave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/already_have_an_account"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_9ssp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_toEndOf="@id/tv_donthave"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/login_now"
                android:textColor="@color/blue"
                android:textSize="@dimen/_9ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/terms_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/already_acount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginBottom="@dimen/_35sdp">

            <TextView
                android:id="@+id/tv_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/by_signing_up"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_9ssp" />

            <TextView
                android:id="@+id/tv_termscond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_toEndOf="@id/tv_term"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/terms_conditions"
                android:textColor="@color/blue"
                android:textSize="@dimen/_9ssp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>