<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.GroupsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/topBarCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_3sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_18sdp"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:src="@drawable/search_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/groups"
                android:textSize="@dimen/_13ssp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBarCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/findEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_13sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:background="@drawable/deny_btn_bg"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/find_events"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/myGroups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/deny_btn_bg"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="My Groups"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:background="@drawable/deny_btn_bg"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/discover"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:id="@+id/recommendForYour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/recomemded_for_you"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_seeAllRecommenedForYou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/see_all"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recommendForYour"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/groups_you_might_be_interested_in"
                    android:textSize="@dimen/_9ssp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/groupsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/border_color"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="@dimen/_13sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/new_for_you"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newPostsForYouRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp" />

            <!--           <View
                           android:layout_width="match_parent"
                           android:layout_height="@dimen/_11sdp"
                           android:layout_marginTop="@dimen/_16sdp"
                           android:background="@color/border_color" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/border_color"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="@dimen/_13sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/old_ones"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/prevoiusPostsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                tools:listitem="@layout/item_post_group_fragment" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/floatbtnLayout"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_round_float_btn"
        android:elevation="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFlaotAdd"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/plus_sign" />
    </LinearLayout>
</RelativeLayout>